--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>D1268277 </title>
 </head>
 <body>
+<img class="title" src="imgs/popcat.svg" alt="POPCAT">
 
+<div class="cat-img" id="p"></div>
 </body>
 </html>
