--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
-
-    <title>D1268277 </title>
+    <title>POPCAT CLASSIC</title>
 </head>
-<body>
-<img class="title" src="imgs/popcat.svg" alt="POPCAT" >
 
-<div class="cat-img" id="p">9999</div>
+<body>
+<img class="title" src="imgs/popcat.svg" alt="POPCAT">
+
+<div class="cat-img" id="p"></div>
 </body>
 </html>
